--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,4 +42,13 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?904c8af54adb3b66427bfedd6a565253";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </head>
