--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -103,7 +103,7 @@
     </div>
 </div>
 
-<div style="position: fixed; right: 16px; bottom: 62px;">
+<div style="position: fixed; right: 16px; top: 62px;">
     <img src="/search/img/cb-search.png"  id="cb-search-btn"  title="双击ctrl试一下"/>
 </div>
 
@@ -118,6 +118,7 @@
 <!-- Bootstrap Core JavaScript -->
 <!-- Currently, only navbar scroll-down effect at desktop still depends on this -->
 <script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
+
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/hux-blog.min.js " | prepend: site.baseurl }}"></script>
