--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords"  content="{{ site.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
+	<meta name="google-site-verification" content="VU8hB7Uocg6Nf4wvdbaUKhuRLOnCabAzWv8cubxmaiU" />
 	<meta name="baidu-site-verification" content="cUTA8r0za1" />
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
