--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,6 +80,8 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
+					本站总访问量:<span id="busuanzi_value_site_pv"></span>，本站访客数:<span id="busuanzi_value_site_uv"></span>，本文总阅读量:<span id="busuanzi_value_page_pv"></span>
+                    <br>
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
                     Theme by <a href="https://github.com/yanshigou/yanshigou.github.io">Dzt</a>  Thanks to <a href="http://huangxuan.me">Hux Blog</a>
@@ -93,6 +95,10 @@
         </div>
     </div>
 </footer>
+
+<!-- busuanzi -->
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
 
 <!-- jQuery -->
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
