dogebug.cn的谷歌验证

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     <meta name="keywords"  content="{{ site.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
 	<meta name="google-site-verification" content="VU8hB7Uocg6Nf4wvdbaUKhuRLOnCabAzWv8cubxmaiU" />
+	<meta name="google-site-verification" content="XPlPTgVGj3c6c8141Nyp7nkCd7PWX8ED8q_VAUVl9Vc" />
 	<meta name="baidu-site-verification" content="cUTA8r0za1" />
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
