--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,13 @@
 			type: 'wechat',
 			qrImg: '{{ site.baseurl }}/img/dashang/wechatpay.png'
 		  }
+		  , {
+        type: 'CodeForalipay',
+		icon:'{{ site.baseurl }}/img/dashang/CodeIcon.png',
+        qrImg: '{{ site.baseurl }}/img/dashang/hongbao.png',
+        name:'红包',
+        desc:'  打开支付宝扫一扫     同学,领个红包再走'
+      }
 		]
 	  }).init()
 	</script>
