--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
-    <meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+    <!-- <meta charset="utf-8"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
@@ -28,7 +29,8 @@
         type: 'CodeForalipay',
 		icon:'{{ site.baseurl }}/img/dashang/CodeIcon.png',
         qrImg: '{{ site.baseurl }}/img/dashang/hongbao.png',
-        name:'hongbao'
+        name:'红包',
+        desc:'  打开支付宝扫一扫     同学,领个红包再走'
       }
 		]
 	  }).init()
