--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,5 @@
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-    <!-- <meta charset="utf-8"> -->
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
@@ -24,13 +23,13 @@
 		  }, {
 			type: 'wechat',
 			qrImg: '{{ site.baseurl }}/img/dashang/wechatpay.png'
-		  }, {
-			type: 'CodeForalipay',
-			icon:'{{ site.baseurl }}/img/dashang/CodeIcon.png',
-			qrImg: '{{ site.baseurl }}/img/dashang/hongbao.png',
-			name:'红包',
-			desc:'  打开支付宝扫一扫     同学,领个红包再走'
 		  }
+		  , {
+        type: 'CodeForalipay',
+		icon:'{{ site.baseurl }}/img/dashang/CodeIcon.png',
+        qrImg: '{{ site.baseurl }}/img/dashang/hongbao.png',
+        name:'  '
+      }
 		]
 	  }).init()
 	</script>
