--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,7 +69,7 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
-<script>
+<!-- <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -77,5 +77,5 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>
+</script> -->
 </head>
